tools/tests/errors/surf_name_03.experr
name 'inner' is not defined
